# tielu

./: AdvancedAnalyzer.cpp  AdvancedAnalyzer.h  BUILD.md  CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  DESIGN.md  DataAnalyzer.cpp  DataAnalyzer.h  FileManager.cpp  FileManager.h  GUI_BUILD_GUIDE.md  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Debug  Makefile.Release  PROJECT_SUMMARY.md  PassengerFlow.cpp  PassengerFlow.h  QUICK_START.md  README.md  RailwaySystem.pro  RailwaySystemGUI_resource.rc  Route.cpp  Route.h  Station.cpp  Station.h  TimeSeriesAnalyzer.cpp  TimeSeriesAnalyzer.h  Train.cpp  Train.h  build_gui.bat  main.cpp  main_gui.cpp  run.bat  test_advanced_algorithms.cpp  列车表（列车编码、列车代码、列车运量）.csv  功能展示说明.md  客运站点（站点名称、站点编号、备注）.csv  (+3 more)
data/: flow_records.csv  routes.csv  stations.csv  trains.csv
data_utf8/: 列车表（列车编码、列车代码、列车运量）.csv  客运站点（站点名称、站点编号、备注）.csv  运营线路客运站（运营线路编码、站点id、线路站点id、上一站id、运营线路站间距离 、下一站id、运输距离、线路代码）.csv
debug/: object_script.RailwaySystemGUI.Debug
release/: main_gui.moc  moc_predefs.h  object_script.RailwaySystemGUI.Release
tools/: convert_encoding.py
